{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 69,
  "lineage": "df65e7eb-76e3-4069-6cff-6a8988fff064",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:internet-gateway/igw-00b55aee7dcf86490",
            "id": "igw-00b55aee7dcf86490",
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ca49826bf2d8d54e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00b55aee7dcf86490",
            "id": "r-rtb-0f0cf2c9e3a292b951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f0cf2c9e3a292b95",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f0cf2c9e3a292b95",
            "owner_id": "210780328849",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ca49826bf2d8d54e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044f9fbdb3fab2f0f",
            "route_table_id": "rtb-0f0cf2c9e3a292b95",
            "subnet_id": "subnet-0802ab864564820e0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07619d8e7148c0e3a",
            "route_table_id": "rtb-0f0cf2c9e3a292b95",
            "subnet_id": "subnet-0ab71d58f2fabb908"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db931bf49d6e1cd1",
            "route_table_id": "rtb-0f0cf2c9e3a292b95",
            "subnet_id": "subnet-0a72a6502f7adff68"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:subnet/subnet-0802ab864564820e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.101.0/24",
            "id": "subnet-0802ab864564820e0",
            "map_public_ip_on_launch": true,
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ca49826bf2d8d54e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:subnet/subnet-0ab71d58f2fabb908",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.102.0/24",
            "id": "subnet-0ab71d58f2fabb908",
            "map_public_ip_on_launch": true,
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ca49826bf2d8d54e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:subnet/subnet-0a72a6502f7adff68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.103.0/24",
            "id": "subnet-0a72a6502f7adff68",
            "map_public_ip_on_launch": true,
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ca49826bf2d8d54e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210780328849:vpc/vpc-0ca49826bf2d8d54e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ed989f6ff3e9e7d3",
            "default_route_table_id": "rtb-0c0dab3e8ac859fe5",
            "default_security_group_id": "sg-0757e2b8b09b4c3dc",
            "dhcp_options_id": "dopt-c09eecbb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ca49826bf2d8d54e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c0dab3e8ac859fe5",
            "owner_id": "210780328849",
            "tags": {
              "Environment": "dev",
              "Name": "justin-demo-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}